# iDown-Pro

./: index.html  package-lock.json  package.json
docs/superpowers/specs/: 2026-04-10-instagram-downloader-pro-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: auth.rs  download.rs  extract.rs  ffmpeg.rs  mod.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/download/: mod.rs  muxer.rs  types.rs
src-tauri/src/extractor/: dash.rs  mod.rs  types.rs
src-tauri/src/ffmpeg/: manager.rs  version.rs
src-tauri/src/utils/: error.rs  fs.rs  http.rs  logger.rs  mod.rs  proxy.rs
