[package]
name = "instagram-downloader-pro"
version = "0.1.0"
edition = "2024"

[lib]
name = "instagram_downloader_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["windows-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
zip = "2"
sha2 = "0.10"
quick-xml = "0.37"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
integration = []
